--- a/JS/nomad/ReactJs/index.html
+++ b/JS/nomad/ReactJs/index.html
@@ -9,10 +9,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script type="text/babel">
-    const root = document.getElementById("root");
-  </script>
+  <script src="index.js"></script>
 </html>
